--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -685,6 +685,7 @@ editor.cannot_commit_to_protected_branch = Cannot commit to protected branch '%s
 commits.desc = Browse source code change history.
 commits.commits = Commits
 commits.search = Search commits…
+commits.search.tooltip = You can use prefixes in search<br>Examples:<br><b>author:</b>alice<br><b>committer:</b>bob<br><b>after:</b>2012-04-01<br><b>before:</b>2018-12-31
 commits.find = Search
 commits.search_all = All Branches
 commits.author = Author
