--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -685,7 +685,7 @@ editor.cannot_commit_to_protected_branch = Cannot commit to protected branch '%s
 commits.desc = Browse source code change history.
 commits.commits = Commits
 commits.search = Search commits…
-commits.search.tooltip = You can prefix keywords with "author:", "committer:", "after:", or "before:", e.g. "reverted author:Alice before:2019-04-01".
+commits.search.tooltip = You can prefix keywords with "author:", "committer:", "after:", or "before:", e.g. "revert author:Alice before:2019-04-01".
 commits.find = Search
 commits.search_all = All Branches
 commits.author = Author
